--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
 OPENAI_API_KEY="your_api_key_here"
-
-# config file with puzzle names to convert
-CGTEST_CONFIG=".cgtest.cg-ai.php"
+OPENAI_MODEL="gpt-5-mini"           # which model to use, e.g. gpt-5, gpt-5-mini, gpt-5-nano, etc.
+CGTEST_CONFIG=".cgtest.cg-ai.php"   # config file with puzzle names to convert
