--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 OPENAI_API_KEY="your_api_key_here"
 OPENAI_MODEL="gpt-5-mini"           # which model to use, e.g. gpt-5, gpt-5-mini, gpt-5-nano, etc.
 CGTEST_CONFIG=".cgtest.cg-ai.php"   # config file with puzzle names to convert
+CG_SESSION="your_cg_session_id_here" # current codingame session cookie
+CG_USERID="your_cg_user_id_here"    # codingame userid (numeric)
